# opencv

./: .gitignore
edge_detection/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
picture1/: .gitignore  CMakeLists.txt  main.cpp
picture2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
picture3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
video/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
video_line/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
